Add Excel generic reader
by [aripmav1896@gmail.com] in [2011-10-22 00:57:48 (-02:00)]

--- a/Ak.DataAccess/Ak.DataAccess.csproj
+++ b/Ak.DataAccess/Ak.DataAccess.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Excel\Reader.cs" />
     <Compile Include="Facebook\Communication.cs" />
     <Compile Include="NHibernate\Helpers\StringsAsLike.cs" />
     <Compile Include="NHibernate\UserPassed\ConnectionInfo.cs" />
