One to one helper on NH
by [Dara Keon (Ísis)] in [2013-03-07 13:32:35 (-03:00)]

--- a/Ak.DataAccess/Ak.DataAccess.csproj
+++ b/Ak.DataAccess/Ak.DataAccess.csproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <Compile Include="Excel\Reader.cs" />
     <Compile Include="Facebook\Communication.cs" />
+    <Compile Include="NHibernate\AutoMapping\AutoMappingOne2One.cs" />
     <Compile Include="NHibernate\Helpers\StringsAsLike.cs" />
     <Compile Include="NHibernate\UserPassed\ConnectionInfo.cs" />
     <Compile Include="NHibernate\UserPassed\AutoMappingInfo.cs" />
