--- a/Ak.XML/Ak.XML.csproj
+++ b/Ak.XML/Ak.XML.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{ED39BCED-DE3F-45DB-BB83-39EC967C92E8}</ProjectGuid>
+    <ProjectGuid>{BE5C6AFD-8D76-4A62-B77A-C5503FCDBE57}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ak.MVC</RootNamespace>
-    <AssemblyName>Ak.MVC</AssemblyName>
+    <RootNamespace>Ak.XML</RootNamespace>
+    <AssemblyName>Ak.XML</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Ak.XML.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,8 +34,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,13 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Authentication\AjaxAuthorize.cs" />
-    <Compile Include="Authentication\Authenticate.cs" />
-    <Compile Include="Authentication\IRole.cs" />
-    <Compile Include="Forms\HtmlHelperExtension.cs" />
-    <Compile Include="Forms\SelectListExtension.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Route\RouteInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ak.Generic\Ak.Generic.csproj">
