--- a/Ak.Generic/Ak.Generic.csproj
+++ b/Ak.Generic/Ak.Generic.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Collection\ItemGroup.cs" />
     <Compile Include="Exceptions\ExceptionExtension.cs" />
     <Compile Include="Extensions\DictionaryExtension.cs" />
+    <Compile Include="Extensions\EnumExtension.cs" />
     <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\Property.cs" />
