--- a/Ak.NHibernate/Ak.NHibernate.csproj
+++ b/Ak.NHibernate/Ak.NHibernate.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Base\BaseData.cs" />
     <Compile Include="Base\BaseRepository.cs" />
     <Compile Include="Base\BaseService.cs" />
+    <Compile Include="Base\SearchItem.cs" />
     <Compile Include="Base\TransactionController.cs" />
     <Compile Include="Conventions\CascadeConvention.cs" />
     <Compile Include="Conventions\EnumConvention.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Base\SessionBuilder.cs" />
     <Compile Include="Base\SessionFactoryBuilder.cs" />
+    <Compile Include="Base\Query.cs" />
     <Compile Include="UserPassed\AutoMappingInfo.cs" />
     <Compile Include="UserPassed\ConnectionInfo.cs" />
     <Compile Include="UserPassed\DataInitializer.cs" />
