--- a/Source/Ak.MVC/DK.MVC.csproj
+++ b/Source/Ak.MVC/DK.MVC.csproj
@@ -50,9 +50,9 @@
     <Compile Include="Route\RouteInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ak.Generic\Ak.Generic.csproj">
+    <ProjectReference Include="..\Ak.Generic\DK.Generic.csproj">
       <Project>{CF70FB71-50D7-4014-92CF-9ABF51579EC6}</Project>
-      <Name>Ak.Generic</Name>
+      <Name>DK.Generic</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
