--- a/Source/Ak.XML/DK.XML.csproj
+++ b/Source/Ak.XML/DK.XML.csproj
@@ -2,21 +2,19 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{83ED2E58-E590-4E6A-B976-6595049551E7}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{BE5C6AFD-8D76-4A62-B77A-C5503FCDBE57}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ak.All</RootNamespace>
-    <AssemblyName>Ak.All</AssemblyName>
+    <RootNamespace>Ak.XML</RootNamespace>
+    <AssemblyName>Ak.XML</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,11 +22,10 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Ak.All.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\Ak.XML.XML</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,9 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,33 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ak.Excel\Ak.Excel.csproj">
-      <Project>{F2EDE40B-6855-4801-AA0F-74E5412C1B0A}</Project>
-      <Name>Ak.Excel</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Ak.Facebook\Ak.Facebook.csproj">
-      <Project>{BD75CF69-95B8-4BCB-B1E6-DF449417439F}</Project>
-      <Name>Ak.Facebook</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Ak.Generic\Ak.Generic.csproj">
+    <ProjectReference Include="..\Ak.Generic\DK.Generic.csproj">
       <Project>{CF70FB71-50D7-4014-92CF-9ABF51579EC6}</Project>
-      <Name>Ak.Generic</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Ak.MVC\Ak.MVC.csproj">
-      <Project>{ed39bced-de3f-45db-bb83-39ec967c92e8}</Project>
-      <Name>Ak.MVC</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Ak.NHibernate\Ak.NHibernate.csproj">
-      <Project>{5CCE8FD9-BF36-4C3B-8651-D2FB97295D74}</Project>
-      <Name>Ak.NHibernate</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Ak.XML\Ak.XML.csproj">
-      <Project>{BE5C6AFD-8D76-4A62-B77A-C5503FCDBE57}</Project>
-      <Name>Ak.XML</Name>
+      <Name>DK.Generic</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
