--- a/Source/DK.All/DK.All.csproj
+++ b/Source/DK.All/DK.All.csproj
@@ -53,27 +53,27 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ak.Excel\DK.Excel.csproj">
+    <ProjectReference Include="..\DK.Excel\DK.Excel.csproj">
       <Project>{F2EDE40B-6855-4801-AA0F-74E5412C1B0A}</Project>
       <Name>DK.Excel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Ak.Facebook\DK.Facebook.csproj">
+    <ProjectReference Include="..\DK.Facebook\DK.Facebook.csproj">
       <Project>{BD75CF69-95B8-4BCB-B1E6-DF449417439F}</Project>
       <Name>DK.Facebook</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Ak.Generic\DK.Generic.csproj">
+    <ProjectReference Include="..\DK.Generic\DK.Generic.csproj">
       <Project>{CF70FB71-50D7-4014-92CF-9ABF51579EC6}</Project>
       <Name>DK.Generic</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Ak.MVC\DK.MVC.csproj">
+    <ProjectReference Include="..\DK.MVC\DK.MVC.csproj">
       <Project>{ed39bced-de3f-45db-bb83-39ec967c92e8}</Project>
       <Name>DK.MVC</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Ak.NHibernate\DK.NHibernate.csproj">
+    <ProjectReference Include="..\DK.NHibernate\DK.NHibernate.csproj">
       <Project>{5CCE8FD9-BF36-4C3B-8651-D2FB97295D74}</Project>
       <Name>DK.NHibernate</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Ak.XML\DK.XML.csproj">
+    <ProjectReference Include="..\DK.XML\DK.XML.csproj">
       <Project>{BE5C6AFD-8D76-4A62-B77A-C5503FCDBE57}</Project>
       <Name>DK.XML</Name>
     </ProjectReference>
