--- a/Source/DK.MVC/DK.MVC.csproj
+++ b/Source/DK.MVC/DK.MVC.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Route\RouteInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ak.Generic\DK.Generic.csproj">
+    <ProjectReference Include="..\DK.Generic\DK.Generic.csproj">
       <Project>{CF70FB71-50D7-4014-92CF-9ABF51579EC6}</Project>
       <Name>DK.Generic</Name>
     </ProjectReference>
