--- a/Source/DK.All/DK.All.csproj
+++ b/Source/DK.All/DK.All.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{83ED2E58-E590-4E6A-B976-6595049551E7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ak.All</RootNamespace>
-    <AssemblyName>Ak.All</AssemblyName>
+    <RootNamespace>DK.All</RootNamespace>
+    <AssemblyName>DK.All</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -24,7 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Ak.All.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\DK.All.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
