--- a/Source/DK.NHibernate/DK.NHibernate.csproj
+++ b/Source/DK.NHibernate/DK.NHibernate.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Base\BaseData.cs" />
     <Compile Include="Base\BaseRepository.cs" />
     <Compile Include="Base\BaseService.cs" />
+    <Compile Include="Base\FakeData.cs" />
+    <Compile Include="Base\IData.cs" />
     <Compile Include="Base\IUpload.cs" />
     <Compile Include="Base\IUploadParent.cs" />
     <Compile Include="Base\SearchItem.cs" />
@@ -85,7 +87,13 @@
     <Compile Include="Helpers\StringsAsLike.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Base\SessionFactoryBuilder.cs" />
-    <Compile Include="Base\Query.cs" />
+    <Compile Include="Queries\FakeQuery.cs" />
+    <Compile Include="Queries\GroupBy.cs" />
+    <Compile Include="Queries\IQuery.cs" />
+    <Compile Include="Queries\LikeType.cs" />
+    <Compile Include="Queries\Query.cs" />
+    <Compile Include="Queries\Summarize.cs" />
+    <Compile Include="Queries\SummarizeType.cs" />
     <Compile Include="UserPassed\AutoMappingInfo.cs" />
     <Compile Include="UserPassed\ConnectionInfo.cs" />
     <Compile Include="UserPassed\DataInitializer.cs" />
