tests: add fake to use memory DB for tests

--- a/Source/DK.NHibernate/DK.NHibernate.csproj
+++ b/Source/DK.NHibernate/DK.NHibernate.csproj
@@ -70,8 +70,9 @@
     <Compile Include="Base\BaseData.cs" />
     <Compile Include="Base\BaseRepository.cs" />
     <Compile Include="Base\BaseService.cs" />
-    <Compile Include="Base\FakeData.cs" />
+    <Compile Include="Fakes\FakeData.cs" />
     <Compile Include="Base\IData.cs" />
+    <Compile Include="Base\ITransactionController.cs" />
     <Compile Include="Base\IUpload.cs" />
     <Compile Include="Base\IUploadParent.cs" />
     <Compile Include="Base\SearchItem.cs" />
@@ -81,14 +82,16 @@
     <Compile Include="Conventions\EnumConvention.cs" />
     <Compile Include="Conventions\NameConvention.cs" />
     <Compile Include="Conventions\NullableConvention.cs" />
+    <Compile Include="Fakes\FakeTransaction.cs" />
+    <Compile Include="Fakes\IDbBackup.cs" />
     <Compile Include="Helpers\Enums.cs" />
-    <Compile Include="Helpers\FakeHelper.cs" />
+    <Compile Include="Fakes\FakeHelper.cs" />
     <Compile Include="Helpers\SchemaChanger.cs" />
     <Compile Include="Helpers\StoreConfiguration.cs" />
     <Compile Include="Helpers\StringsAsLike.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Base\SessionFactoryBuilder.cs" />
-    <Compile Include="Queries\FakeQuery.cs" />
+    <Compile Include="Fakes\FakeQuery.cs" />
     <Compile Include="Queries\GroupBy.cs" />
     <Compile Include="Queries\IQuery.cs" />
     <Compile Include="Queries\LikeType.cs" />
