--- a/Source/DK.All/DK.All.csproj
+++ b/Source/DK.All/DK.All.csproj
@@ -57,9 +57,9 @@
       <Project>{F2EDE40B-6855-4801-AA0F-74E5412C1B0A}</Project>
       <Name>DK.Excel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DK.Generic\DK.Generic.csproj">
+    <ProjectReference Include="..\DK.Generic\DK.Util.csproj">
       <Project>{CF70FB71-50D7-4014-92CF-9ABF51579EC6}</Project>
-      <Name>DK.Generic</Name>
+      <Name>DK.Util</Name>
     </ProjectReference>
     <ProjectReference Include="..\DK.MVC\DK.MVC.csproj">
       <Project>{ed39bced-de3f-45db-bb83-39ec967c92e8}</Project>
