--- a/Source/DK.MVC/DK.MVC.csproj
+++ b/Source/DK.MVC/DK.MVC.csproj
@@ -48,9 +48,9 @@
     <Compile Include="Route\RouteInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DK.Generic\DK.Generic.csproj">
+    <ProjectReference Include="..\DK.Generic\DK.Util.csproj">
       <Project>{CF70FB71-50D7-4014-92CF-9ABF51579EC6}</Project>
-      <Name>DK.Generic</Name>
+      <Name>DK.Util</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
