--- a/Source/DK.NHibernate/DK.NHibernate.csproj
+++ b/Source/DK.NHibernate/DK.NHibernate.csproj
@@ -114,9 +114,9 @@
     <Compile Include="Base\SessionManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DK.Generic\DK.Generic.csproj">
+    <ProjectReference Include="..\DK.Generic\DK.Util.csproj">
       <Project>{CF70FB71-50D7-4014-92CF-9ABF51579EC6}</Project>
-      <Name>DK.Generic</Name>
+      <Name>DK.Util</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
