--- a/Source/DK.Util/DK.Util.csproj
+++ b/Source/DK.Util/DK.Util.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{CF70FB71-50D7-4014-92CF-9ABF51579EC6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DK.Util</RootNamespace>
-    <AssemblyName>DK.Util</AssemblyName>
+    <RootNamespace>Keon.Util</RootNamespace>
+    <AssemblyName>Keon.Util</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -22,7 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\DK.Util.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\Keon.Util.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -53,6 +53,7 @@
     <Compile Include="Extensions\EnumExtension.cs" />
     <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\MainAssemblyInfo.cs" />
     <Compile Include="Reflection\Property.cs" />
     <Compile Include="Extensions\Token.cs" />
   </ItemGroup>
